chore: add meta and title sharelink

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>MS GLOW SPEK7A INDRALOKA</title>
+    <meta name="description" content="MS GLOW SPEK7A INDRALOKA - The MS Glow's 7th Anniversary Event!" />
   </head>
 
   <body>
